# zappi_cake

./: Dockerfile  README.md  docker-compose.yml  env.dev  manage.py  pyproject.toml  pytest.ini  requirements.txt
order/: factories.py  urls.py
order/migrations/: 0001_initial.py
order/models/: orders.py
order/serializers/: __init__.py  order_serialize.py
order/viewset/: order_viewset.py
product/: factories.py  urls.py
product/migrations/: 0001_initial.py  0002_rename_prize_product_price.py
product/models/: category.py  products.py
product/serializers/: category_serializer.py  product_serializer.py
product/viewset/: __init__.py
tests/models/: test_order.py  test_products.py
tests/viewset/: test_categoty_viewset.py  test_order_viewset.py  test_products_viewset.py
zappi_cake/: asgi.py  settings.py  urls.py  wsgi.py
